--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,7 +9,7 @@
       <h5 class="card-title">Get your coins now</h5>
       <p class="card-text">Login or Register this site and manage your acconts</p>
       <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
-      <a href="#" class="btn btn-primary">Register</a>
+      <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
     </div>
   </div>
 {% endblock %}
