To access a person's account information, an HTML page sends a request to an API on the server side.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -20,6 +20,9 @@
                     </tr>
                 </thead>
                 <tbody>
+                        <tr>
+                            {{info}}
+                        </tr>
                         {% for coin in coins.data %}
                         <tr>
                             <td>{{ coin.symbol }}</td>
