--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,8 +2,38 @@
 {% block title %} {{ user.username }} {% endblock %}
 {% load custom_filters %}
 {% block content %}
-<h1>All Coins</h1>
+<h1>Home Page</h1>
 <hr><br><br>
+<div class="card">
+    <div class="card-header">
+        <h4 class="card-title">Personal Info</h4>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive small">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th>User ID</th>
+                        <th>Authorities</th>
+                        <th>Trader Type</th>
+                        <th>Margin Coin</th>
+                        <th>Account Equity</th>
+                        <th>USDT Equity</th>
+                        <th>BTC Equity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ account.data.userId }}</td>
+                        <td> {% for auth in account.data.authorities %} {{auth}}, {% endfor %}</td>
+                        <td>{{ account.data.traderType }}</td>
+                        <td>{{ info.data.marginCoin }}</td>
+                        <td>{{ info.data.accountEquity }}</td>
+                        <td>{{ info.data.usdtEquity }}</td>
+                        <td>{{ info.data.btcEquity }}</td>
+                    </tr>
+                </tbody>
+            </table>
 <div class="card">
     <div class="card-header">
         <h4 class="card-title">All Coins</h4>
@@ -20,9 +50,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                        <tr>
-                            {{info}}
-                        </tr>
+
                         {% for coin in coins.data %}
                         <tr>
                             <td>{{ coin.symbol }}</td>
