Get account assets

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -36,6 +36,35 @@
             </table>
 <div class="card">
     <div class="card-header">
+        <h4 class="card-title">Account Assets</h4>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive small">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th>Coin Name</th>
+                        <th>Total Balance</th>
+                        <th>Available</th>
+                        <th>Reserved</th>
+                        <th>Today's PnL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for asset in assets.data %}
+                        {% if asset.available >= '0' %}
+                        <tr>
+                            <td>{{ asset.coin }}</td>
+                            <td>{{ asset.available|add:asset.frozen|add:asset.locked }}</td>
+                            <td>{{ asset.available }}</td>
+                            <td>{{ asset.frozen|add:asset.locked }}</td>
+                        </tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+<div class="card">
+    <div class="card-header">
         <h4 class="card-title">All Coins</h4>
     </div>
     <div class="card-body">
