Home page now have welcome sign for user

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,7 +2,7 @@
 {% block title %} {{ user.username }} {% endblock %}
 {% load custom_filters %}
 {% block content %}
-<h1>Home Page</h1>
+<h1>Welcome {{ user.username }}</h1>
 <hr><br><br>
 <div class="card">
     <div class="card-header">
