--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -7,6 +7,9 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+
+    {% include "includes/navbar.html" %}
+    
     {% block content %}
         <!-- content -->
     {% endblock %}
