--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,6 +4,7 @@
 {% block content %}
 <h1>Welcome {{ user.username }}</h1>
 <hr><br><br>
+{% if account or info or assets or coins %}
 <div class="card">
     <div class="card-header">
         <h4 class="card-title">Personal Info</h4>
@@ -94,4 +95,22 @@
         </div>
     </div>
 </div>
+{% else %}
+<div class="card">
+    <div class="card-header">
+        <h4 class="card-title">No Data Found</h4>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive small">
+            <table class="table table-striped table-sm">
+                <tbody>
+                    <tr>
+                        <td>Thare is no information. Please connect any of your crypto accounts</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
