Delete API information from db

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -58,8 +58,20 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>test</td>
-                      <td><a href="{% url "bitget_access" %}" class="btn btn-md btn-success float-end me-2 ms-2">BitGet</a></td>
+                      <td>
+                        {% if connected %}
+                            Connected
+                        {% else %}
+                            Not Connected
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if connected %}
+                        <a href="{% url "delete_bitget" %}" class="btn btn-md btn-success float-end me-2 ms-2">Delete Your Api Key</a>
+                        {% else %}
+                        <a href="{% url "bitget_access" %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect BitGet</a>
+                        {% endif %}
+                    </td>
                     </tr>
                     <tr>
                       <td>test</td>
