--- a/website/templates/sites/bitget.html
+++ b/website/templates/sites/bitget.html
@@ -3,7 +3,6 @@
 {% load custom_filters %}
 {% block content %}
 <br>
-{% if account or info or assets or coins %}
 <div class="card">
     <div class="card-header">
         <h4 class="card-title">Personal Info</h4>
@@ -24,13 +23,13 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>{{ account.data.userId }}</td>
-                        <td> {% for auth in account.data.authorities %} {{auth}}, {% endfor %}</td>
-                        <td>{{ account.data.traderType }}</td>
-                        <td>{{ info.data.marginCoin }}</td>
-                        <td>{{ info.data.accountEquity }}</td>
-                        <td>{{ info.data.usdtEquity }}</td>
-                        <td>{{ info.data.btcEquity }}</td>
+                        <td>{{ personal_info.data.userId }}</td>
+                        <td> {% for auth in personal_info.data.authorities %} {{auth}}, {% endfor %}</td>
+                        <td>{{ personal_info.data.traderType }}</td>
+                        <td>{{ account.data.marginCoin }}</td>
+                        <td>{{ account.data.accountEquity }}</td>
+                        <td>{{ account.data.usdtEquity }}</td>
+                        <td>{{ account.data.btcEquity }}</td>
                     </tr>
                 </tbody>
             </table>
@@ -51,7 +50,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for asset in assets.data %}
+                    {% for asset in account_assets.data %}
                         {% if asset.available >= '0' %}
                         <tr>
                             <td>{{ asset.coin }}</td>
@@ -94,22 +93,4 @@
         </div>
     </div>
 </div>
-{% else %}
-<div class="card">
-    <div class="card-header">
-        <h4 class="card-title">No Data Found</h4>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive small">
-            <table class="table table-striped table-sm">
-                <tbody>
-                    <tr>
-                        <td>Thare is no information. Please connect any of your crypto accounts</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-{% endif %}
 {% endblock %}
