--- a/website/templates/includes/navbar.html
+++ b/website/templates/includes/navbar.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="{% url "bitget" %}">BitGet</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ByBit</a>
+            <a class="nav-link" href="{% url "bybit" %}">ByBit</a>
           </li>
         </ul>
         <div class="ms-auto">
