Model and form created for OKX API. Then added to html pages

--- a/website/templates/includes/navbar.html
+++ b/website/templates/includes/navbar.html
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url "bybit" %}">ByBit</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url "okx" %}">OKX</a>
+          </li>
         </ul>
         <div class="ms-auto">
         <ul class="navbar-nav">
