--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -88,6 +88,21 @@
                         <a href="{% url "bybit_access" %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect Bybit</a>
                         {% endif %}</td>
                     </tr>
+                    <tr>
+                      <td>                       
+                        {% if okx_connected %}
+                            Connected
+                        {% else %}
+                            Not Connected
+                        {% endif %}
+                      </td>
+                      <td>                        
+                        {% if okx_connected %}
+                        <a href="{% url "delete_okx" %}" class="btn btn-md btn-success float-end me-2 ms-2">Delete Your Api Key</a>
+                        {% else %}
+                        <a href="{% url "okx_access" %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect Okx</a>
+                        {% endif %}</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
