--- a/website/templates/access.html
+++ b/website/templates/access.html
@@ -13,6 +13,11 @@
             {% csrf_token %}{{bybit_form|crispy}}
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        {% elif okx_form %}
+        <form method="POST">
+            {% csrf_token %}{{okx_form|crispy}}
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
         {% endif %}
     </div>
 </div>
