--- a/website/templates/sites/okx.html
+++ b/website/templates/sites/okx.html
@@ -23,7 +23,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>{{ bybit_account_assets_fund.result.memberId }}</td>
+                        <td>{{ okx_info.data.0.uid }}</td>
                         <td> {% for auth in info.data.authorities %} {{auth}}, {% endfor %}</td>
                         <td>{{ bybit_account.result.list.0.accountType }}</td>
                         <td>{{ bybit_account.result.list.0.coin.1.coin }}</td>
