--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -57,52 +57,6 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>
-                        {% if bitget_connected %}
-                            BitGet API is Connected
-                        {% else %}
-                            BitGet API is Not Connected
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if bitget_connected %}
-                        <a href="{% url "delete_bitget" %}" class="btn btn-md btn-success float-end me-2 ms-2">Delete Your Api Key</a>
-                        {% else %}
-                        <a href="{% url "bitget_access" %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect BitGet</a>
-                        {% endif %}
-                    </td>
-                    </tr>
-                    <tr>
-                      <td>                       
-                        {% if bybit_connected %}
-                            ByBit API is Connected
-                        {% else %}
-                            ByBit API is Not Connected
-                        {% endif %}
-                      </td>
-                      <td>                        
-                        {% if bybit_connected %}
-                        <a href="{% url "delete_bybit" %}" class="btn btn-md btn-success float-end me-2 ms-2">Delete Your Api Key</a>
-                        {% else %}
-                        <a href="{% url "bybit_access" %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect Bybit</a>
-                        {% endif %}</td>
-                    </tr>
-                    <tr>
-                      <td>                       
-                        {% if okx_connected %}
-                            OKX API is Connected
-                        {% else %}
-                            OKX API is Not Connected
-                        {% endif %}
-                      </td>
-                      <td>                        
-                        {% if okx_connected %}
-                        <a href="{% url "delete_okx" %}" class="btn btn-md btn-success float-end me-2 ms-2">Delete Your Api Key</a>
-                        {% else %}
-                        <a href="{% url "okx_access" %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect Okx</a>
-                        {% endif %}</td>
-                    </tr>
                     {% for market in crypto_markets %}
                       <tr>
                         {% if market.slug in connection %}
@@ -110,14 +64,14 @@
                           {{ market.name }} API Connected
                         </td>
                         <td>
-                          <a href="{% url "delete_test" market.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Delete Your Api Key</a>
+                          <a href="{% url "delete" market.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Delete Your Api Key</a>
                         </td>
                         {% else %}
                         <td>
                           {{ market.name }} is Not Connected
                         </td>
                         <td>
-                          <a href="{% url "test" market.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect {{ market.name }}</a>
+                          <a href="{% url "access" market.id %}" class="btn btn-md btn-success float-end me-2 ms-2">Connect {{ market.name }}</a>
                         </td>
                         {% endif %}
                       </tr>
