--- a/website/templates/sites/bitget.html
+++ b/website/templates/sites/bitget.html
@@ -3,6 +3,7 @@
 {% load custom_filters %}
 {% block content %}
 <br>
+{% if personal_info or account or coins %}
 <div class="card">
     <div class="card-header">
         <h4 class="card-title">Personal Info</h4>
@@ -100,4 +101,22 @@
         </div>
     </div>
 </div>
+{% else %}
+<div class="card">
+    <div class="card-header">
+        <h4 class="card-title">No Data Found</h4>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive small">
+            <table class="table table-striped table-sm">
+                <tbody>
+                    <tr>
+                        <td>Thare is no information. Please connect BitGet account on profile</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
