--- a/website/templates/sites/bybit.html
+++ b/website/templates/sites/bybit.html
@@ -3,6 +3,7 @@
 {% load custom_filters %}
 {% block content %}
 <br>
+{% if bybit_account_id or bybit_account or bybit_coins %}
 <div class="card">
     <div class="card-header">
         <h4 class="card-title">Personal Info</h4>
@@ -97,4 +98,22 @@
         </div>
     </div>
 </div>
+{% else %}
+<div class="card">
+    <div class="card-header">
+        <h4 class="card-title">No Data Found</h4>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive small">
+            <table class="table table-striped table-sm">
+                <tbody>
+                    <tr>
+                        <td>Thare is no information. Please connect ByBit account on profile</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
