--- a/website/templates/access.html
+++ b/website/templates/access.html
@@ -7,4 +7,6 @@
             {% csrf_token %}{{form|crispy}}
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+    </div>
+</div>
 {% endblock  %}
