--- a/website/templates/coin.html
+++ b/website/templates/coin.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} {{ user.username }} {% endblock %}
 {% load custom_filters %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="card">
         <div class="card-header">
@@ -26,5 +27,13 @@
                 </table>
             </div>
         </div>
+</div>
+<div class="card mx-auto" style="max-width: 700px; margin-top:100px;">
+    <div class="card-body">
+        <form method="POST">
+            {% csrf_token %}{{form|crispy}}
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
+</div>
 {% endblock %}
