--- a/website/templates/sites/bybit.html
+++ b/website/templates/sites/bybit.html
@@ -80,6 +80,7 @@
                         <th>Price</th>
                         <th>24H Change</th>
                         <th>Volume</th>
+                        <th class="d-flex flex-row-reverse">Details</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -90,6 +91,7 @@
                             <td>{{ coin.lastPrice }}</td>
                             <td>{{ coin.highPrice24h|extract:coin.lowPrice24h|division:coin.lowPrice24h|multiply:100|floatformat:"2" }}%</td>
                             <td>{{ coin.volume24h|format_value }}</td>
+                            <td><a href="{% url "bybit_coin_detail" coin.symbol %}" class="btn btn-md btn-success float-end me-2 ms-2">Details</a></td>
                         </tr>
                         {% endfor %}
 
