Reorganization after database problem

--- a/website/templates/coin_details/bitget_coin.html
+++ b/website/templates/coin_details/bitget_coin.html
@@ -19,7 +19,7 @@
                     </thead>
                     <tbody>
                             <tr>
-                                <td>{{ coin.open }}</td>
+                                <td>{{ coin.open24h }}</td>
                                 <td>{{ coin.change24h|multiply:100|floatformat:"2" }}%</td>
                                 <td>{{ coin.baseVolume|format_value }}</td>
                             </tr>
