--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,7 +3,7 @@
 {% load custom_filters %}
 {% block content %}
 <br>
-{% if account or info or assets or coins %}
+{% if bitget_personal_info or bitget_account or assets or bitget_coins %}
 <div class="card">
     <div class="card-header">
         <h4 class="card-title">Personal Info</h4>
